--- a/resources/html/help/help.html
+++ b/resources/html/help/help.html
@@ -36,7 +36,7 @@
       </div>
     </div>
     {{/each}}
-    <div class="logo">Created By Miao-Yunzai & BlueArchive-plugin  当前版本：内测版</div>
+    <div class="logo">Created By Miao-Yunzai & BlueArchive-plugin  当前版本：啊这，不知道</div>
   </div>
 </body>
 
