--- a/resources/html/help/help.html
+++ b/resources/html/help/help.html
@@ -4,9 +4,9 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   <link rel="stylesheet" type="text/css" href="{{pluResPath}}html/help/help.css" />
-  <link rel="preload" href="{{resPath}}font/tttgbnumber.ttf" as="font" />
+  <link rel="preload" href="{{pluResPath}}font/HYWenHei-55W.ttf" as="font" />
   <link rel="preload" href="{{pluResPath}}img/bg.jpg" as="image" />
-
+  <link rel="preload" href="{{pluResPath}}img/log/log.png" as="image" />
   <link rel="shortcut icon" href="#" />
 </head>
 {{@headStyle}}
@@ -14,6 +14,7 @@
 <body>
   <div class="container" id="container">
     <div class="head_box">
+      <img class="logo" src="{{pluResPath}}img/log/log.png" />
       <div class="id_text">BlueArchive-plugin使用帮助</div>
       <h2 class="day_text">还在添加帮助</h2>
 
