--- a/resources/html/help/help.html
+++ b/resources/html/help/help.html
@@ -37,7 +37,7 @@
       </div>
     </div>
     {{/each}}
-    <div class="logo">Created By Miao-Yunzai & BlueArchive-plugin  当前版本：啊这，不知道</div>
+    <div class="version">{{@versionHtml}}</div>
   </div>
 </body>
 
