--- a/resources/html/help/help.html
+++ b/resources/html/help/help.html
@@ -37,7 +37,7 @@
       </div>
     </div>
     {{/each}}
-    <div class="version">{{@versionHtml}}</div>
+    <div class="version">{{@copyright}}</div>
   </div>
 </body>
 
