--- a/resources/html/rank/rank.html
+++ b/resources/html/rank/rank.html
@@ -38,7 +38,7 @@
   </div>
   </div>
 
-    <div class="version">{{@versionHtml}}</div>
+    <div class="version">{{@copyright}}</div>
   </div>
 </body>
 
