修正档线参数，优化

--- a/resources/html/rank/rank.html
+++ b/resources/html/rank/rank.html
@@ -24,8 +24,8 @@
   <div class="dx_box">
     <div class="dx_title">各难度最低排名</div>
     <div class="dx">
+      <div class="dx_2">{{@minRank.INS}}</div>
       <div class="dx_2">{{@minRank.EX}}</div>
-      <div class="dx_2">{{@minRank.HC}}</div>
       <div class="dx_2">{{@minRank.N}}</div>
     </div>
   </div>
