调整抽卡样式

--- a/resources/html/gacha/index.html
+++ b/resources/html/gacha/index.html
@@ -6,7 +6,8 @@
 
 <body>
   <div class="container" id="container">
-    <div class="info"><span class="text">{{@info}}</span></div>
+    <div class="info_left"><span class="pool">当期up：{{@up}}</span></div>
+    <div class="info_right"><span class="text">{{@info}}</span></div>
 
     <div class="cards">
       {{each list e}}
